--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sussol-test3",
+  "name": "sussol-tasks",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "jest"
@@ -14,5 +14,16 @@
   },
   "devDependencies": {
     "jest": "^24.9.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/diegoevangelisti/sussol-tasks.git"
+  },
+  "bugs": {
+    "url": "https://github.com/diegoevangelisti/sussol-tasks/issues"
+  },
+  "homepage": "https://github.com/diegoevangelisti/sussol-tasks#readme"
 }
